# AgenticAlphaa

./: .dockerignore  .gitignore  .mcp.json  CONTEXT_SCOPE_FINAL_FIX.md  Dockerfile  OBSERVABILITY_GUIDE.md  README.md  SYSTEM_ARCHITECTURE.md  TEST_SUITE.md  alpha-agent-project.md  bachler.md  env.example  interview.md  main.py  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  spaghetti_report.md  template.py  test_plan.md  test_resarch_tool.py  ticket.md
.claude/: mcp.json  settings.json
.codebase-memory/: artifact.json  graph.db.zst
.github/workflows/: daily_refresh.yml  deploy.yml
agents/: __init__.py  financial_agent.py  manager_agent.py  research_agent.py  sentiment_agent.py  state.py
api/: config.py  dependencies.py  main.py  schemas.py
api/core/: exceptions.py
api/routes/: analyze.py  history.py  progress.py
core/: error_handler.py  observability.py  progress_bus.py
evaluation/: backtester.py  metrics.py  run_ragas.py  validate_period_consistency.py
frontend/: alpha-agent-app (1).html  alpha-agent-app.html
infra/: ecr-stack.yaml  ecs-stack.yaml  oidc-role-stack.yaml
memory/: manager_memory.py  mem0_client.py
rag/: __init__.py  document_ingestion.py  embedding_manager.py  evaluation.py  graph_store.py  hybrid_rag.py  hybrid_retriever.py  ingestion.py  loader.py  processor.py  retriever.py  seed.py  test_rag_pipeline.py  vector_store.py
scheduler/: daily_refresh.py
tests/api_test/: test_core_eceptions.py  test_dependencies_api.py
tests/core_test/: test_error_handler.py  test_observability.py
tests/financial_test/: test_financial_ratio_calculator.py  test_sec_edgar.py
tests/integration_tests/: conftest.py  test_integration_financial_agent.py  test_integration_full_pipeline.py  test_integration_search_agent.py  test_integration_sentiment_agent.py
tests/search_test/: test_news_search.py  test_search_server.py  test_tavily_search.py
tools/: decorator.py  reddit_scraper.py  sec_edgar.py  sentiment_scorer.py  tavily_search.py  yahoo_finance.py
(+63 files in other folders)
