[project]
name = "agenticalpha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "httpx>=0.28.1",
    "langsmith>=0.8.4",
    "mcp[cli]>=0.4.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.1",
    "yfinance>=1.3.0",
]
