[project]
name = "agenticalpha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.30.0",
    "asyncio>=4.0.0",
    "feedparser>=6.0.10",
    "httpx>=0.25.0",
    "langchain-text-splitters>=0.2.0",
    "langsmith>=0.8.4",
    "mcp[cli]>=0.4.0",
    "numpy>=1.26.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.1",
    "sentence-transformers>=3.0.0",
    "supabase>=2.5.0",
    "torch>=2.2.0",
    "yfinance>=0.2.40",
]
