[project]
name = "agenticalpha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.102.0",
    "asyncio>=4.0.0",
    "datasets>=5.0.0",
    "fastapi>=0.137.2",
    "feedparser>=6.0.12",
    "google-generativeai>=0.8.6",
    "httpx>=0.27.0",
    "langchain-anthropic>=1.4.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-vertexai>=3.2.4",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "langsmith>=0.8.4",
    "mcp[cli]>=1.27.1",
    "neo4j>=5.19.0",
    "nltk>=3.9.4",
    "numpy>=1.26.0",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "requests>=2.32.0",
    "sentence-transformers>=5.5.0",
    "sentry-sdk>=2.0.0",
    "supabase>=2.30.0",
    "torch>=2.2.0",
    "transformers>=5.8.1",
    "yfinance>=1.3.0",
]
